...
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>

    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>

    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="warning">Warning</string>
    <string name="notFound">Not Found</string>

    <string name="instructions">Instructions</string>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
...
    <string name="sensors">Sensors</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnecting">Connecting to Device</string>

    <!--Sensor-->
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>

    <string name="selectTest">Select Test</string>
    <string name="awaitingResult">Awaiting result</string>

...
    <string name="unableToConnect">Could not connect. Try connecting again.</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>

    <!--Permission-->
    <string name="storagePermission">Storage permission is required</string>
...
    <!--Sensor-->
    <string name="incorrectDevice">Incorrect Device</string>
    <string name="expectedDeviceNotFound">The expected sensor was not found.</string>
    <string name="connectCorrectSensor"><Data><![CDATA[Connect the <b>%s</b> sensor.]]></Data></string>

    <!--Messages-->
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="errorLoadingConfiguration">Could not load configuration information</string>
    <string name="external_app_not_installed">Akvo Flow is not installed.</string>
    <string name="install_external_app">Please install the Akvo Flow app from your instance.</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
...
