...
    <string name="watchVideo">Watch</string>
    <string name="demonstration">Demo</string>
    <string name="startSurvey">Start Survey</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>
    <string name="errorCameraFlashRequired">This phone does not have a Camera Flash which is required by Caddisfly</string>
    <string name="errorTestNotAvailable">This test is not available</string>
    <string name="errorCalibrationIncomplete">Calibration is incomplete. Do you want to calibrate now?</string>
    <string name="diagnosticAbbreviated">Diag</string>
    <string name="enableUserMode">Enable User Mode</string>

    <!--Settings Screen-->
    <string name="settings">Settings</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrateSummary">Calibrate colorimeter or external sensors</string>
    <string name="updateCheck">Check update</string>
    <string name="updateSummary">Check if a new version is available</string>
    <string name="dataConnection">Data Connection</string>
    <string name="about">About</string>
    <string name="displaysVersionNumber">Displays version number</string>
    <string name="language">Language</string>
...
