...
        android:orderInCategory="0"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menuLoad"
        android:enabled="true"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:orderInCategory="0"
        android:title="@string/load"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/actionSwatches"
        android:icon="@drawable/ic_style_black_24dp"
        android:orderInCategory="100"
        android:title="@string/swatches"
        app:showAsAction="always" />
</menu>

